--- a/BerkayUnutkan/style_berkay.css
+++ b/BerkayUnutkan/style_berkay.css
@@ -241,7 +241,7 @@ h1.title{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding-top: 100px; 
+  padding: 100px; 
 }
 .registration-class{
   background-color: rgba(31, 69, 145, 0.2);
@@ -273,7 +273,7 @@ h1.title{
   border: none;
   outline: none;
   width: 45%;
-  height: 10px;
+  height: 30px;
   cursor: pointer;
   color: white;
   background: #1F4591;
@@ -308,6 +308,13 @@ h3{
   font-family: 'Inter', sans-serif;
 }
 .registration-title-2{
+  font-size: 100px;
+  font-weight: 300;
+  color: #fff;
+  font-family: 'SIMPLIFICA';
+}
+
+.second-layer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -318,21 +325,13 @@ h3{
   background-repeat: no-repeat;
   background-size: cover;
   height: 500px;
-  font-size: 100px;
-  font-weight: 300;
-  color: #fff;
-  font-family: 'SIMPLIFICA';
-}
-
-.second-layer {
-  padding: 100px 0px 100px 0px;
 }
 
 .registration-2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  
+  padding-top: 100px;
 }
 
 .registration-2 div {
@@ -512,6 +511,7 @@ h3{
   .end{
       padding-bottom: 100px ;
   }
+  
   /*foot responsive*/
   .kader{
       display: flex;
@@ -600,9 +600,13 @@ h3{
 		margin-bottom: 50px;
 		flex-direction: column;
 	}
-  
+  .registration{
+    padding: 50px 0px 0px 0px;
+  }
   .registration-title-2{
     text-align: center;
+    margin: 0 auto;
+    width: 85%;
   }
 }
 
