--- a/BerkayUnutkan/style_berkay2.css
+++ b/BerkayUnutkan/style_berkay2.css
@@ -426,13 +426,12 @@ summary {
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
-    background-color: #E4E7EC;
+    background-color: #CFD8E5;
     margin: 0 auto;
     width: 85%;
     height: 250px;
 }
 .frame{
-    font-family: 'Inter',sans-serif;
     position: absolute;
     background-color: rgba(31, 69, 145, 0.9);
     color: white;
@@ -440,15 +439,23 @@ summary {
     flex-direction: column;
     opacity: 80%;
     border-radius: 15px;
-    margin-top: 100px;
+    margin-top: 90px;
     width: 280px;
     height: 290px;
 }
 .frame h1{
+    font-family: 'SIMPLIFICA';
+    display: flex;
+    justify-content: center;
     margin-top: 25px;
     margin-left: 13px;
     margin-bottom: 18px;
-    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    font-size: 28px;
+}
+.frame p{
+    font-family: 'Inter',sans-serif;
 }
 .blue{
     display: flex;
@@ -471,7 +478,9 @@ summary {
     margin-right: 130px;
 }
 .txtBlue h1{
-    font-size: 20px;
+    font-family: 'SIMPLIFICA';
+    letter-spacing: 1px;
+    font-size: 28px;
 }
 .txtBlue p{
     font-size: 16px;
@@ -479,7 +488,12 @@ summary {
 }
 .txtBlue a{
     color: #000;
-   text-decoration: none;
+    text-decoration: none;
+}
+.txtBlue a:hover{
+    color: #1F4591;
+    font-weight: 600;
+    text-decoration: none;
 }
 .icons{
     display: flex;
@@ -492,6 +506,7 @@ summary {
     width: 14%;
 }
 .icon img{
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(24deg) brightness(105%) contrast(113%);
     width: 100%;
 }
 .icons p{
@@ -500,8 +515,18 @@ summary {
     line-height: 20px;
     width: 60%;
 }
+footer{
+    background-color: #CFD8E5;
+}
+/*Footer*/
 
 @media only screen and (max-width: 480px) {
+    th{
+        font-size: 13px;
+    }
+    td{
+        font-size: 13px;
+    }
 	a {
 		/* tablet & desktop version */
 		display: inline-block;
@@ -510,10 +535,10 @@ summary {
 	.title {
 		/* tablet */
 		width: 100%;
-        text-align: center;
+        text-align: left;
 	}
 	.subtitle {
-		text-align: center;
+		text-align: left;
 	}
 	.schoolboard {
 		width: 100%;
@@ -525,10 +550,15 @@ summary {
     }
     table.special {
         border-collapse: unset;
-        width: 15%;
         margin-top: 20px;
-        
-      }
+        flex-wrap: wrap;
+    }
+    .txtI p{
+        font-size: 16px;
+    }
+    p{
+        font-size: 13px;
+    }
     .schoolboard-text2{
         display: none;
     }
@@ -544,5 +574,53 @@ summary {
     .schoolboard-text-trust{
         display: none;
     }
-    
+     /*foot responsive*/
+     .schoolboard-text-profession{
+        padding-bottom: 150px;
+     }
+     .frame{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        border-radius: 0px;
+        height: 400px;
+        padding: 10px 0px;
+        margin-top: 0px;
+    }
+    .icons{
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        margin-left: 0px;
+    }
+    .icon{
+        width: 10%;
+        margin-bottom: 10px;
+    }
+    .icon img{
+        width: 100%;
+    }
+    .icons p{
+        margin-left: 0px;
+    }
+    .frame h1{
+        text-align: center;
+        font-size: 40px;
+        margin-bottom: 5px;
+        margin-top: 0px;
+    }
+    .frame p{
+        font-size: 13px;
+    }
+    .foot{
+        justify-content: center;
+    }
+    .white{
+        display: none;
+    }
+    .blue{
+        display: none;
+    }
+
+    /*foot responsive*/
 }
