--- a/BerkayUnutkan/style_berkay3.css
+++ b/BerkayUnutkan/style_berkay3.css
@@ -344,8 +344,109 @@ ul.dropdown li a:hover{
     line-height: 20px;
     width: 60%;
 }
-/*Footer*/
+/*footer*/
+.foot{
+    display: flex;
+    justify-content: flex-end;
+    margin: 0 auto;
+    width: 85%;
+}
+.white{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    background-color: #CFD8E5;
+    margin: 0 auto;
+    width: 85%;
+    height: 250px;
+}
+.frame{
+    position: absolute;
+    background-color: rgba(31, 69, 145, 0.9);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    opacity: 80%;
+    border-radius: 15px;
+    margin-top: 90px;
+    width: 280px;
+    height: 290px;
+}
+.frame h1{
+    font-family: 'SIMPLIFICA';
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+    margin-left: 13px;
+    margin-bottom: 18px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    font-size: 28px;
+}
+.frame p{
+    font-family: 'Inter',sans-serif;
+}
+.blue{
+    display: flex;
+    flex-direction: row;
+    background-color: rgba(31, 69, 145, 0.2);
+    width: 100%;
+    height: 220px;
+}
+.txtB{
+    font-family: 'Inter',sans-serif;
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+    width: 80%;
+    padding-top: 40px;
+}
 
+.txtBlue{
+    color: #000;
+    margin-right: 130px;
+}
+.txtBlue h1{
+    font-family: 'SIMPLIFICA';
+    letter-spacing: 1px;
+    font-size: 28px;
+}
+.txtBlue p{
+    font-size: 16px;
+    margin-top: 20px;
+}
+.txtBlue a{
+    color: #000;
+    text-decoration: none;
+}
+.txtBlue a:hover{
+    color: #1F4591;
+    font-weight: 600;
+    text-decoration: none;
+}
+.icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 15px;
+    margin-left: 40px;
+}
+.icon{
+    width: 14%;
+}
+.icon img{
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(24deg) brightness(105%) contrast(113%);
+    width: 100%;
+}
+.icons p{
+    font-size: 14px;
+    margin-left: 13px;
+    line-height: 20px;
+    width: 60%;
+}
+footer{
+    background-color: #CFD8E5;
+}
 /*Footer*/
 @media screen and (max-width: 480px) {
     .line{
@@ -371,4 +472,53 @@ ul.dropdown li a:hover{
     .imageLayer img{
         width: 0%;
     }
+    .vacancies{
+        padding-top: 0px;
+    }
+    /*foot responsive*/
+    .frame{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        border-radius: 0px;
+        height: 400px;
+        padding: 10px 0px;
+        margin-top: 0px;
+    }
+    .icons{
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        margin-left: 0px;
+    }
+    .icon{
+        width: 10%;
+        margin-bottom: 10px;
+    }
+    .icon img{
+        width: 100%;
+    }
+    .icons p{
+        margin-left: 0px;
+    }
+    .frame h1{
+        text-align: center;
+        font-size: 40px;
+        margin-bottom: 5px;
+        margin-top: 0px;
+    }
+    .frame p{
+        font-size: 15px;
+    }
+    .foot{
+        justify-content: center;
+    }
+    .white{
+        display: none;
+    }
+    .blue{
+        display: none;
+    }
+    /*foot responsive*/
 }
+
