--- a/NassimEjja/Style.css
+++ b/NassimEjja/Style.css
@@ -233,6 +233,7 @@ h1.title {
 	font-family: "SIMPLIFICA";
 	font-size: 60px;
 	font-weight: 100;
+	margin-bottom: 50px;
 }
 
 h2 {
@@ -412,6 +413,10 @@ h2 {
 	}
 	.title {
 		text-align: left;
+		margin: 30px 0px;
+	}
+	.container {
+		padding: 40px 0px;
 	}
 	/*foot responsive*/
 	.foot {
@@ -624,9 +629,6 @@ h2 {
 	.insch {
 		text-align: center;
 	}
-	.title {
-		text-align: center;
-	}
 	.registration-title {
 		text-align: center;
 	}
@@ -649,31 +651,44 @@ h2 {
 		margin-bottom: 50px;
 		flex-direction: column;
 	}
+	.histo p {
+		font-family: "inter", sans-serif;
+		font-size: 13px;
+	}
+	/*foot responsive*/
 	.frame {
 		display: flex;
 		justify-content: center;
 		width: 100%;
 		border-radius: 0px;
 		height: 400px;
+		padding: 10px 0px;
 		margin-top: 0px;
 	}
 	.icons {
+		flex-direction: column;
 		justify-content: center;
+		text-align: center;
+		margin-left: 0px;
 	}
 	.icon {
 		width: 10%;
+		margin-bottom: 10px;
 	}
 	.icon img {
 		width: 100%;
 	}
+	.icons p {
+		margin-left: 0px;
+	}
 	.frame h1 {
 		text-align: center;
 		font-size: 40px;
-		margin-bottom: 25px;
+		margin-bottom: 5px;
 		margin-top: 0px;
 	}
 	.frame p {
-		font-size: 20px;
+		font-size: 15px;
 	}
 	.foot {
 		justify-content: center;
